# src/routes/authRoutes.js
@@ -3,23 +3,11 @@ const passport = require("passport");
 const authController = require("../controllers/authController");
 const isAuthenticated = require("../middleware/isAuthenticated");
 const { validateRegisterApp } = require("../middleware/validateInput");
-const { generateToken } = require('../middleware/isAuthenticated');
+
 
 
 
 const router = express.Router();
-
-// Example usage when user logs in
-router.post('/login', async (req, res) => {
-  const user = await User.findOne({ email: req.body.email });
-  
-  if (!user || !user.isPasswordValid(req.body.password)) {
-    return res.status(400).json({ message: 'Invalid credentials' });
-  }
-
-  const token = generateToken(user); // Generate a token
-  res.json({ token });
-});
 
 // Google OAuth Routes
 router.get(
@@ -34,11 +22,10 @@ router.get(
 );
 
 // API Key Management Routes
-router.post('/auth/register-app', isAuthenticated, validateRegisterApp, authController.registerApp);
-router.get('/auth/api-key', isAuthenticated, authController.getApiKey);
-router.post('/auth/revoke-api-key', isAuthenticated, authController.revokeApiKey);
 
-// Failure Route
-router.get('/auth/failure', authController.authFailure);
+router.post("/auth/registerApp", authController.registerApp);
+router.get("/auth/getApiKey", authController.getApiKey);
+router.post("/auth/revokeApiKey", authController.revokeApiKey);
+router.get("/auth/failure", authController.authFailure);
 
 module.exports = router;
