# src/swagger-output.json
@@ -45,15 +45,10 @@
         }
       }
     },
-    "/auth/register-app": {
+    "/auth/registerApp": {
       "post": {
         "description": "",
         "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
@@ -86,22 +81,12 @@
         }
       }
     },
-    "/auth/api-key": {
+    "/auth/getApiKey": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -112,15 +97,10 @@
         }
       }
     },
-    "/auth/revoke-api-key": {
+    "/auth/revokeApiKey": {
       "post": {
         "description": "",
         "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
@@ -140,9 +120,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
